--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<nav>
+		<ul>
+			<% if logged_in?%>
+			<li><%= link_to "Logout" , logout_path%></li>
+			<%else%>
+			<li><%= link_to "Login" , login_path%></li>
+			<li><%= link_to "Sign Up!", new_user_path%></li>
+			<%end%>
+			<li><%= link_to  "Home" , root_path %></li>
+		</ul>
+	</nav>
 
 <%= yield %>
 
