added basic setup for private pub

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,7 +5,14 @@
 <p>$<%= @item.price %></p>
 <p><%= @item.description %></p>
 
+
 <% if logged_in? %>
+<%= form_for Conversation.new do |f|%>
+<%= f.hidden_field :item_id, :value => @item.id %>
+<%= f.hidden_field :seller_id, :value => @item.seller_id %>
+<%= f.hidden_field :buyer_id, :value => current_user.id %>
+<%= f.submit "Stat Conversation", :class => "btn" %>
+<%end%>
 <% if authorized_user(@item) %>
 	<%= link_to "Delete", item_path(@item), :method => "DELETE", :class => "btn btn-danger"%>
 	<div class="form-inline">
