--- a/app/assets/javascripts/components/item.js.coffee.erb
+++ b/app/assets/javascripts/components/item.js.coffee.erb
@@ -16,6 +16,6 @@
       React.DOM.td null, amountFormat(@props.item.price)
       React.DOM.td null,
         React.DOM.a
-          className: 'btn btn-danger'
+          className: 'btn btn-success'
           href: "/items/" + @props.item.id 
           "Show"
