--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
 	<nav>
-		<ul>
+		<ul class="nav nav-tabs">
 			<% if logged_in?%>
 			<li><%= link_to "Logout" , logout_path%></li>
 			<li><%= link_to current_user.username, user_path(current_user)%></li>
@@ -21,6 +22,6 @@
 	</nav>
 
 <%= yield %>
-
+</div>
 </body>
 </html>
