--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,28 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
+.title {
+	text-align: center;
+}
+
+.new_message {
+	position: relative;
+	left: 25%;
+}
+
+.chat-container {
+	width: 60%;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+ #chat {
+ 	padding: 2%;
+ 	margin-top: 2%;
+ 	background-color: rgba(230, 230, 230, 1)
+ }
+
+ .message {
+ 	border-bottom: 1px solid black;
+ }
