--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,5 @@
+<%= form_tag(items_path, :method => "get", id: "search-form") do %>
+<%= text_field_tag :search, params[:search], placeholder: "Search Items" %>
+<%= submit_tag "Search" %>
+<% end %>
 <%= react_component 'Items', { data: @items } %>
